--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,11 +3,11 @@
         <div class="contact">
             <h3>2WAYS.com</h3>
             <p>Việc đặt phòng của bạn là động lực cho chúng tôi tiếp tục duy trì
-                được công ty.</p>
+                                                được công ty.</p>
             <p>Bạn có thể liên hệ với chúng tôi thông qua các mạng xã hội</p>
             <div class="contact__social social">
-                <a href="#"><img class="social__logo" src="/imgs/brands/fb_logo.webp" alt="Facebook_" /></a>
-                <a href="#"><img class="social__logo" src="/imgs/brands/insta_logo.png" alt="Instagram" /></a>
+                <a href="#"><img class="social__logo" src="/imgs/brands/fb_logo.webp" alt="Facebook_"/></a>
+                <a href="#"><img class="social__logo" src="/imgs/brands/insta_logo.png" alt="Instagram"/></a>
                 <a href="#"><img class="social__logo" src="/imgs/brands/youtube_logo.png" alt="YouTube"></a>
             </div>
         </div>
@@ -24,10 +24,9 @@
             <h3>Cập nhật từ chúng tôi</h3>
             <p>Xác nhận thư điện tử của bạn để nhận được ngay những cập nhật mới nhất từ chúng tôi hàng tuần</p>
             <form action="#">
-                <input type="email" name="email_input" id="email_input" class="update__input-field" placeholder="Email của bạn" />
+                <input type="email" name="email_input" id="email_input" class="form-control update__input-field" placeholder="Email của bạn"/>
                 <button class="update__confirm-btn" type="button">Xác nhận</button>
             </form>
         </div>
     </div>
-    </div>
-</footer>
+</div></footer>
