--- a/src/views/pages/payment.ejs
+++ b/src/views/pages/payment.ejs
@@ -1,138 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles/pages/payment.css" />
+    <title>2WAYS.com</title>
+  </head>
+  <body>
+    <%- include('../partials/header-small') %>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/styles/pages/payment.css" />
-  <title>2WAYS.com</title>
-</head>
+    <%- include('../partials/nav-tree', { items: ['Trang chủ', 'Đặt phòng', 'Thanh toán' ]
+      }) %>
 
-<body>
-  <%- include('../partials/header-small') %>
-  <!--  -->
-  <%- include('../partials/nav-tree', { items: ['Trang chủ', 'Đặt phòng', 'Thanh toán' ] }) %>
-
-  <div class="payment--container">
-    <aside class="aside--wrapper">
-      <div class="hotel-detail">
-        <div class="type-hotel">
-          <h6>Khách sạn</h6>
-          <div class="starts-icon">
-            <span class="material-symbols-outlined filled-start">
-              star_rate
-            </span>
-            <span class="material-symbols-outlined filled-start">
-              star_rate
-            </span>
-            <span class="material-symbols-outlined filled-start">
-              star_rate
-            </span>
-            <span class="material-symbols-outlined unfilled-start">
-              star_rate
-            </span>
-            <span class="material-symbols-outlined unfilled-start">
-              star_rate
-            </span>
+    <div class="payment--container">
+      <aside class="aside--wrapper">
+        <div class="hotel-detail">
+          <div class="type-hotel">
+            <h6>Khách sạn</h6>
+            <div class="starts-icon">
+              <span class="material-symbols-outlined filled-start">
+                star_rate
+              </span>
+              <span class="material-symbols-outlined filled-start">
+                star_rate
+              </span>
+              <span class="material-symbols-outlined filled-start">
+                star_rate
+              </span>
+              <span class="material-symbols-outlined unfilled-start">
+                star_rate
+              </span>
+              <span class="material-symbols-outlined unfilled-start">
+                star_rate
+              </span>
+            </div>
           </div>
-        </div>
-        <h5><b>Tên khách sạn</b></h5>
-        <h6>Vị trí</h6>
-        <div class="wifi-free">
-          <span class="material-symbols-outlined"> wifi </span>
-          <h6>Wifi miễn phí</h6>
-        </div>
-      </div>
-
-      <div class="your-booking-detail">
-        <h1 style="margin: 12px 12px 0 12px">Chi tiết đặt phòng của bạn</h1>
-        <div class="check-date">
-          <div class="checkin-date">
-            <h5>Nhận phòng</h5>
-            <h5><b>T5, 12 tháng 10</b></h5>
-            <h5><b>2023</b></h5>
-            <h5>Từ 14:00</h5>
-          </div>
-
-          <div class="checkout-date">
-            <h5>Trả phòng</h5>
-            <h5><b>T6, 13 tháng 10</b></h5>
-            <h5><b>2023</b></h5>
-            <h5>Cho đến 00:00</h5>
+          <h5><b>Tên khách sạn</b></h5>
+          <h6>Vị trí</h6>
+          <div class="wifi-free">
+            <span class="material-symbols-outlined"> wifi </span>
+            <h6>Wifi miễn phí</h6>
           </div>
         </div>
 
-        <div class="countdown-time">
-          <span class="material-symbols-outlined"> error </span>
-          <h6>Còn 7 ngày nữa</h6>
-        </div>
+        <div class="your-booking-detail">
+          <h1 style="margin: 12px 12px 0 12px">Chi tiết đặt phòng của bạn</h1>
+          <div class="check-date">
+            <div class="checkin-date">
+              <h5>Nhận phòng</h5>
+              <h5><b>T5, 12 tháng 10</b></h5>
+              <h5><b>2023</b></h5>
+              <h5>Từ 14:00</h5>
+            </div>
 
-        <div class="total-length-stay">
-          <h5>Tổng thời gian lưu trú</h5>
-          <h5><b>1 đêm</b></h5>
-        </div>
-
-        <hr />
-
-        <div class="your-choice">
-          <h5>Bạn đã chọn</h5>
-          <h5><b>1 phòng cho 2 người lớn</b></h5>
-          <a href="#"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
-        </div>
-
-        <div class="cost-total">
-          <h6 class="red-line">VND 1.200.000</h6>
-          <div class="cost">
-            <h1>Giá</h1>
-            <h1>VND 1.200.000</h1>
-          </div>
-          <h6>Đã bao gồm thuế và phí</h6>
-        </div>
-      </div>
-
-      <div class="cancel-fee">
-        <h5><b>Chi phí hủy phòng</b></h5>
-        <div class="cancel-free">
-          <span class="material-symbols-outlined"> check_circle </span>
-          <h6>Miễn phí hủy phòng bất kỳ lúc nào</h6>
-        </div>
-      </div>
-    </aside>
-
-    <section id="" class="section--content">
-      <div class="confirm-account">
-        <img src="/imgs/milo.jpg" alt="" />
-        <div class="account-detail">
-          <h5>Bạn đã đăng nhập bằng:</h5>
-          <div class="email-logout">
-            <h5>2152****@gm.uit.edu.vn</h5>
-            <h5>
-              <b style="color: #0866ff">(Không phải bạn? <a href="">Thoát</a>)</b>
-            </h5>
-          </div>
-        </div>
-      </div>
-      <div class="select-methods">
-        <h1>Chọn phương thức thanh toán</h1>
-        <div class="select-method">
-          <div class="method method-one form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" />
-              <label class="form-check-label" for="flexRadioDefault1">
-                <h5><b>Thanh toán bằng tiền mặt</b></h5>
-              </label>
+            <div class="checkout-date">
+              <h5>Trả phòng</h5>
+              <h5><b>T6, 13 tháng 10</b></h5>
+              <h5><b>2023</b></h5>
+              <h5>Cho đến 00:00</h5>
             </div>
           </div>
 
-          <div class="method method-two form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" />
-              <label class="form-check-label" for="flexRadioDefault2">
-                <h5><b>Thanh toán bằng thẻ tín dụng/ghi nợ</b></h5>
-              </label>
+          <div class="countdown-time">
+            <span class="material-symbols-outlined"> error </span>
+            <h6>Còn 7 ngày nữa</h6>
+          </div>
 
+          <div class="total-length-stay">
+            <h5>Tổng thời gian lưu trú</h5>
+            <h5><b>1 đêm</b></h5>
+          </div>
+
+          <hr />
+
+          <div class="your-choice">
+            <h5>Bạn đã chọn</h5>
+            <h5><b>1 phòng cho 2 người lớn</b></h5>
+            <a href="#"><b style="color: #0866ff">Đổi lựa chọn của bạn</b></a>
+          </div>
+
+          <div class="cost-total">
+            <h6 class="red-line">VND 1.200.000</h6>
+            <div class="cost">
+              <h1>Giá</h1>
+              <h1>VND 1.200.000</h1>
+            </div>
+            <h6>Đã bao gồm thuế và phí</h6>
+          </div>
+        </div>
+
+        <div class="cancel-fee">
+          <h5><b>Chi phí hủy phòng</b></h5>
+          <div class="cancel-free">
+            <span class="material-symbols-outlined"> check_circle </span>
+            <h6>Miễn phí hủy phòng bất kỳ lúc nào</h6>
+          </div>
+        </div>
+      </aside>
+
+      <section id="" class="section--content">
+        <div class="confirm-account">
+          <img src="/imgs/milo.jpg" alt="" />
+          <div class="account-detail">
+            <h5>Bạn đã đăng nhập bằng:</h5>
+            <div class="email-logout">
+              <h5>2152****@gm.uit.edu.vn</h5>
+              <h5>
+                <b style="color: #0866ff"
+                  >(Không phải bạn? <a href="">Thoát</a>)</b
+                >
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div class="select-methods" >
+          <h1>Chọn phương thức thanh toán</h1>
+          <div class="select-method">
+            <div class="method method-one form-check">
+              <div class="method-choice">
+                <input
+                  class="material-symbols-outlined form-check-input"
+                  type="radio"
+                  name="flexRadioDefault"
+                  id="flexRadioDefault1"
+                >
+                </input>
+                <label class="form-check-label" for="flexRadioDefault1"><h5><b>Thanh toán bằng tiền mặt</b></h5></label>
+              </div>
+            </div>
+
+            <div class="method method-two form-check ">
+              <div class="method-choice">
+                <input  
+                  class="material-symbols-outlined form-check-input"
+                  type="radio"
+                  name="flexRadioDefault"
+                  id="flexRadioDefault2"
+                  >
+                  <label class="form-check-label" for="flexRadioDefault2"><h5><b>Thanh toán bằng thẻ tín dụng/ghi nợ</b></h5></label>
+                
               <div class="list-account">
                 <div class="list-account-title">
                   <span class="material-symbols-outlined"> credit_card </span>
@@ -140,7 +156,11 @@
                 </div>
                 <div class="account-items">
                   <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+                    <img
+                      src="/imgs/mastercard.png"
+                      alt=""
+                      style="width: 38px; height: 30px"
+                    />
                     <div class="name-bank">
                       <h5>Saccombank</h5>
                       <h5 style="text-align: end"><b>*1108</b></h5>
@@ -148,7 +168,11 @@
                   </div>
 
                   <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+                    <img
+                      src="/imgs/mastercard.png"
+                      alt=""
+                      style="width: 38px; height: 30px"
+                    />
                     <div class="name-bank">
                       <h5>BIDV</h5>
                       <h5 style="text-align: end"><b>*0319</b></h5>
@@ -156,29 +180,37 @@
                   </div>
 
                   <div class="account-item clickable">
-                    <img src="/imgs/mastercard.png" alt="" style="width: 38px; height: 30px" />
+                    <img
+                      src="/imgs/mastercard.png"
+                      alt=""
+                      style="width: 38px; height: 30px"
+                    />
                     <div class="name-bank">
                       <h5>Agribank</h5>
                       <h5 style="text-align: end"><b>*1698</b></h5>
                     </div>
                   </div>
 
-                  <div class="account-item clickable addCreditCardBtn" style="color: #a3adad">
+                  <div class="account-item clickable addCreditCardBtn " style="color: #a3adad">
                     <span class="material-symbols-outlined"> add_card </span>
                     <h5 class="">Thêm thẻ tín dụng mới</h5>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
+              </div>
 
-          <div class="method method-three form-check">
-            <div class="method-choice">
-              <input class="material-symbols-outlined form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3" />
-              <label class="form-check-label" for="flexRadioDefault3">
-                <h5><b>Thanh toán bằng tài khoản ngân hàng</b></h5>
-              </label>
-              <div class="list-account">
+            </div>
+
+            <div class="method method-three form-check">
+              <div class="method-choice">
+                <input  
+                  class="material-symbols-outlined form-check-input"
+                  type="radio"
+                  name="flexRadioDefault"
+                  id="flexRadioDefault3"
+                  >
+                  <label class="form-check-label" for="flexRadioDefault3"><h5><b>Thanh toán bằng tài khoản ngân hàng</b></h5></label>
+              <div class="list-account" >
                 <div class="list-account-title">
                   <span class="material-symbols-outlined"> credit_card </span>
                   <p>Danh sách tài khoản ngân hàng của bạn</p>
@@ -208,69 +240,81 @@
                     </div>
                   </div>
 
-                  <div class="account-item clickable addBankAccountBtn" style="color: #a3adad">
+                  <div class="account-item clickable addBankAccountBtn " style="color: #a3adad">
                     <span class="material-symbols-outlined"> add_card </span>
                     <h5 class="">Thêm tài khoản ngân hàng liên kết</h5>
                   </div>
                 </div>
               </div>
+              </div>
+
             </div>
+
+
           </div>
         </div>
-      </div>
-      <div class="confirm-detail">
-        <!-- Default checkbox -->
-        <div class="confirm-method form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-          <label class="form-check-label" for="flexCheckDefault">
-            <h5>
+        <div class="confirm-detail">
+          <!-- Default checkbox -->
+          <div class="confirm-method form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+  <label class="form-check-label" for="flexCheckDefault"><h5>
               Tôi đồng ý nhận email marketing bao gồm ưu đãi, gợi ý du lịch và
               các cập nhật về sản phẩm cũng như dịch vụ từ 2Ways.
-            </h5>
-          </label>
+            </h5></label>
+          </div>
+
+          <!-- Checked checkbox -->
+          <div class="confirm-method form-check">
+  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked/>
+  <label class="form-check-label" for="flexCheckChecked"><h5>Gửi cho tôi các thông tin cập nhật mới nhất từ 2Ways.</h5></label>
+          </div>
+
+          <h5>
+            <b
+              >Bạn có thể hủy đăng ký bất cứ lúc nào. Xem
+              <a href="#">chính sách bảo mật</a> của chúng tôi.</b
+            >
+          </h5>
+
+          <h5>
+            <b
+              >Đặt phòng của bạn là đặt phòng trực tiếp với 2WAYs và bằng việc
+              hoàn tất đặt phòng này, bạn đồng ý với
+              <a href="#">điều kiện đặt phòng</a>,
+              <a href="#">điều khoản chung</a> và
+              <a href="#">chính sách bảo mật</a>.</b
+            >
+          </h5>
+
+          <div class="button-confirm">
+            <button class="check-info">Kiểm tra lại thông tin</button>
+            <button class="submit-booking doneBookingBtn">Hoàn tất đặt phòng</button>
+          </div>
+
+          <a href="#" style="text-align: end; color: #0866ff"
+            ><b>Các điều kiện đặt phòng là gì?</b></a
+          >
         </div>
+      </section>
+    </div>
 
-        <!-- Checked checkbox -->
-        <div class="confirm-method form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-          <label class="form-check-label" for="flexCheckChecked">
-            <h5>
-              Gửi cho tôi các thông tin cập nhật mới nhất từ 2Ways.
-            </h5>
-          </label>
-        </div>
+    <%- include('../partials/footer') %>
 
-        <h5>
-          <b>Bạn có thể hủy đăng ký bất cứ lúc nào. Xem
-            <a href="#">chính sách bảo mật</a> của chúng tôi.</b>
-        </h5>
-
-        <h5>
-          <b>Đặt phòng của bạn là đặt phòng trực tiếp với 2WAYs và bằng việc
-            hoàn tất đặt phòng này, bạn đồng ý với
-            <a href="#">điều kiện đặt phòng</a>,
-            <a href="#">điều khoản chung</a> và
-            <a href="#">chính sách bảo mật</a>.</b>
-        </h5>
-
-        <div class="button-confirm">
-          <button class="check-info">Kiểm tra lại thông tin</button>
-          <button class="submit-booking doneBookingBtn">
-            Hoàn tất đặt phòng
-          </button>
-        </div>
-
-        <a href="#" style="text-align: end; color: #0866ff"><b>Các điều kiện đặt phòng là gì?</b></a>
-      </div>
-    </section>
-  </div>
-
-  <%- include('../partials/footer') %>
-
-</body>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="/scripts/payment.js"></script>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <scrip
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/scripts/payment.js"></script>
+  </body>
 </html>
