--- a/src/views/pages/booking/info.ejs
+++ b/src/views/pages/booking/info.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <link rel="stylesheet" href="/styles/base.css">
   <link rel="stylesheet" href="/styles/pages/booking/info.css" />
@@ -163,33 +163,28 @@
                 17 m2
               </span>
               <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
+                <span class="material-symbols-outlined">beach_access</span>
+                Hướng biển
               </span>
               <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
+                <span class="material-symbols-outlined">apartment</span>
+                Nhìn ra thành phố
               </span>
               <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
+                <span class="material-symbols-outlined">ac_unit</span>
+                Điều hòa không khí
               </span>
               <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
+                <span class="material-symbols-outlined">bathtub</span>
+                Phòng tắm riêng
               </span>
               <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
+                <span class="material-symbols-outlined">
+                  tv_gen
+                </span>
+                TV màn hình phẳng
               </span>
-              <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
-              </span>
-              <span class="ext__item">
-                <span class="material-symbols-outlined">search</span>
-                17 m2
-              </span>
+
             </div>
 
             <div class="mt-12">
@@ -230,4 +225,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </html>
