--- a/src/views/components/noti-item-account.ejs
+++ b/src/views/components/noti-item-account.ejs
@@ -1,17 +1,17 @@
-<div class="noti-item__block">
+<div class="noti-item__block" style="background: <%= (noti.usernoti_is_read == 0) ? '#00696D1A' : 'white' %>">
     <img src="/imgs/avatar.png" alt="img" class="noti-item__img">
     <form action="/notifications/account-update" method="POST" class="noti-item__main">
-        <input type="hidden" name="hello" value="">
+        <input type="hidden" name="noti_id" value="<%=noti.noti_id%>">
         <div>
-
-
-            <p class="noti-item__title">CẬP NHẬT MẬT KHẨU</p>
-            <p class="noti-item__sub-title">Bạn vừa cập nhật mật khẩu thành công. Hãy đảm bảo rằng hành động này được thực hiện bởi bạn.</p>
+            <p class="noti-item__title"><%= noti.noti_title %></p>
+            <p class="noti-item__sub-title">
+                <%= noti.noti_subtitle %>
+            </p>
         </div>
         <div class="noti-item__info">
             <div class="noti-item__date-time">
-                <p class="noti-item__time">14:12</p>
-                <p class="noti-item__date">11/11/2023</p>
+                <p class="noti-item__time"><%=noti.noti_time%></p>
+                <p class="noti-item__date"><%=noti.noti_date%></p>
             </div>
             <button class="btn--outlined pri popup-btn" type="submit">Xem chi tiết</button>
             <div class="popup">
@@ -32,31 +32,31 @@
                         </div>
                         <div class="popup__content--right">
                             <div class="popup__content-title">
-                                <p class="popup__title">CẬP NHẬT MẬT KHẨU</p>
-                                <p class="popup_sub-tittle">Bạn vừa cập nhật mật khẩu thành công. Hãy đảm bảo rằng hành động này được thực hiện bởi bạn.</p>
+                                <p class="popup__title"><%=noti.noti_title%></p>
+                                <p class="popup_sub-tittle"><%=noti.noti_subtitle%></p>
                             </div>
                             <div class="popup__details">
                                 <p class="popup__details-title">Hành động</p>
                                 <p class="popup__details-content">Nội dung</p>
                                 <div class="noti-item__date-time">
-                                    <p class="noti-item__time">14:12</p>
-                                    <p class="noti-item__date">11/11/2023</p>
+                                    <p class="noti-item__time"><%=noti.noti_time%></p>
+                                    <p class="noti-item__date"><%=noti.noti_date%></p>
                                 </div>
                             </div>
                             <div class="popup__details">
                                 <p class="popup__details-title">Hành động</p>
                                 <p class="popup__details-content">Nội dung</p>
                                 <div class="noti-item__date-time">
-                                    <p class="noti-item__time">14:12</p>
-                                    <p class="noti-item__date">11/11/2023</p>
+                                    <p class="noti-item__time"><%=noti.noti_time%></p>
+                                    <p class="noti-item__date"><%=noti.noti_date%></p>
                                 </div>
                             </div>
                             <div class="popup__details">
                                 <p class="popup__details-title">Hành động</p>
                                 <p class="popup__details-content">Nội dung</p>
                                 <div class="noti-item__date-time">
-                                    <p class="noti-item__time">14:12</p>
-                                    <p class="noti-item__date">11/11/2023</p>
+                                    <p class="noti-item__time"><%=noti.noti_time%></p>
+                                    <p class="noti-item__date"><%=noti.noti_date%></p>
                                 </div>
                             </div>
                         </div>
