--- a/src/public/styles/pages/auth/forgot.css
+++ b/src/public/styles/pages/auth/forgot.css
@@ -2,22 +2,23 @@
 @import url("/styles/partials/header-small-title.css");
 @import url("/styles/partials/footer.css");
 
-html {
+/* html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: #000000;
-}
+} */
 
-body {
+/* body {
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
 .content-container {
     width: 80%;
-    margin: 5vh 0;
+    min-height: calc(100vh - 300px - 112px);
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
