--- a/src/public/styles/partials/footer.css
+++ b/src/public/styles/partials/footer.css
@@ -3,7 +3,7 @@ footer {
 	height: 300px;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 	background: var(--light-gray);
 }
 
