--- a/src/views/pages/site/index.ejs
+++ b/src/views/pages/site/index.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-full') %>
+    <%- include('../../partials/header-full', { user }) %>
     <%- include('../../components/on-top-btn') %>
     <main>
         <section id="discover-section" class="mt-64 primary-text">
